# AI-Dynamics

./: .env.example  .gitignore  API.md  DESIGN.md  PROGRESS.md  README.md  start.sh  启动方式.md
backend/: clear_backlog.py  config.py  database.py  main.py  models.py  pyproject.toml  seed_sources.py
backend/api/: articles.py  briefings.py  fetch.py  sources.py
backend/fetcher/: __init__.py  cleanup.py  filter.py  rss.py  scheduler.py
backend/llm/: briefing.py  engine.py  processor.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ArticleCard.tsx  CategoryBadge.tsx  DateNavigator.tsx  ErrorBoundary.tsx  FetchProgress.tsx  SearchBar.tsx  Skeleton.tsx  Toast.tsx
frontend/src/lib/: api.ts  constants.ts  types.ts
frontend/src/pages/: Briefing.tsx  Feed.tsx  Starred.tsx
